--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .hero-section {
             height: 100vh;
             background: linear-gradient(135deg, rgba(197, 184, 168, 0.75) 0%, rgba(32, 139, 141, 0.75) 100%), 
-                        url('https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&w=1200&q=80') center/cover;
+                        url('https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&w=1200&q=80') center/cover;
             background-attachment: fixed;
             display: flex;
             align-items: center;
@@ -367,7 +367,7 @@
                     </ul>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&w=500&q=80" alt="RoJs & Partners Team">
+                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="RoJs & Partners Team">
                 </div>
             </div>
         </div>
@@ -395,7 +395,7 @@
                 <!-- TRAVEL & WELLNESS -->
                 <div class="division-card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1544919982-b5b5b5b5b5b5?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Travel & Wellness">
+                        <img src="https://images.unsplash.com/photo-1583822261290-991b38693d1b?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Travel & Wellness">
                     </div>
                     <div class="card-content">
                         <h3>✈️ Travel & Wellness</h3>
@@ -408,7 +408,7 @@
                 <!-- MEDICAL CARE -->
                 <div class="division-card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Medical Care">
+                        <img src="https://images.unsplash.com/photo-1631217314831-c6227db76b6e?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Medical Care">
                     </div>
                     <div class="card-content">
                         <h3>🏥 Medical Care</h3>
@@ -421,7 +421,7 @@
                 <!-- BIOGROWTH & AGRO -->
                 <div class="division-card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1574943320219-553eb213f72d?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="BioGrowth & Agro">
+                        <img src="https://images.unsplash.com/photo-1625246333195-78d9c38ad576?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="BioGrowth & Agro">
                     </div>
                     <div class="card-content">
                         <h3>🌱 BioGrowth & Agro</h3>
@@ -434,7 +434,7 @@
                 <!-- SECURITY TECHNOLOGIES -->
                 <div class="division-card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1563206771-cd4628902d4a?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Security Technologies">
+                        <img src="https://images.unsplash.com/photo-1516321318423-f06f70550b57?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Security Technologies">
                     </div>
                     <div class="card-content">
                         <h3>🔒 Security Technologies</h3>
@@ -447,7 +447,7 @@
                 <!-- ENERGY NETWORKS -->
                 <div class="division-card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1494788285927-2b8039834b61?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Energy Networks">
+                        <img src="https://images.unsplash.com/photo-1509391366360-2e938aa1ef14?ixlib=rb-4.0.3&w=500&h=400&fit=crop&q=80" alt="Energy Networks">
                     </div>
                     <div class="card-content">
                         <h3>⚡ Energy Networks</h3>
