--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 <!-- MEDICAL CARE -->
                 <div class="division-card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1535916707207-35f97e715e1b?auto=format&fit=crop&w=1000&q=80" alt="Medical Care">
+                        <img src="https://www.perplexity.ai/search/which-llc-company-for-non-resi-It8k6oNHSAKPgGyJszAOow?sm=i" alt="Medical Care">
                     </div>
                     <div class="card-content">
                         <h3>🏥 Medical Care</h3>
