--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 <!-- MEDICAL CARE -->
                 <div class="division-card">
                     <div class="card-image">
-                        <img src="https://www.perplexity.ai/search/which-llc-company-for-non-resi-It8k6oNHSAKPgGyJszAOow?sm=i" alt="Medical Care">
+                        <img src="https://plus.unsplash.com/premium_photo-1661779396815-56fe1ca9877c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZG9jdG9yJTIwd2l0aCUyMHBhdGllbnR8ZW58MHx8MHx8fDA%3D" alt="Medical Care">
                     </div>
                     <div class="card-content">
                         <h3>🏥 Medical Care</h3>
